forced to commit halfway through messing with timepicker

--- a/booking.css
+++ b/booking.css
@@ -2,60 +2,27 @@
     height: 30px;
 }
 
-.calButton {
-}
-
-#selectedDateDisplay, #selectedTimeDisplay {
+#selectedDateDisplay{
     font-size: 24px;
-}
-
-#selectedDateDisplay {
     grid-column-start: span 7;
-}
-
-#selectedTimeDisplay {
-    grid-column-start: span 2;
 }
 
 #monthYearDisplay {
     grid-column-start: span 5;
 }
 
-#amButton, #pmButton {
-    background-color: blue;
-}
-
-#timeGrid, #calGrid {
+#calGrid {
     display: grid;
     grid-row-gap: 5px;
     grid-column-gap:5px;
     padding: 5px;
-}
-
-#calGrid {
     grid-template-columns: repeat(7, 50px);
     grid-template-rows: 40px 15px repeat(5, 50px) 25px;
 }
 
-#timeGrid {
-    grid-template-columns: 180px 180px;
-    grid-template-rows: 50px 250px 50px;
-}
 
-#innerTimeGridContainer {
-    grid-column-start: span 2;
-    overflow: scroll;
-}
 
-#innerTimeGrid {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(3, 100px);
-    grid-auto-rows: 50px;
-    max-height: 250px;
-}
-
-#calGrid, #laneNumPickerContainer, #timeGrid, #nextBookerButton, #submitBookerButton {
+#calGrid, #laneNumPickerContainer, #timePickerContainer, #nextBookerButton, #submitBookerButton {
     margin: auto;
     background-color: #f6f6f6;
     width: fit-content;
@@ -72,7 +39,7 @@
     margin-top: 20px;
 }
 
-#calGrid > div, #laneNumPickerContainer > div, #timeGrid > div {
+#calGrid > div, #laneNumPickerContainer > div, #timePickerScroller > div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,14 +54,6 @@
     border: 1px solid black;
 }
 
-.timeTile.clickableTile {
-    order: -1;
-}
-
-.timeTile {
-    grid-column-start: span 3;
-}
-
 .laneButton {
     height: 50px;
     width: 50px;
@@ -105,4 +64,14 @@
     height: 50px;
     width: 50px;
     font-size: 24px;
+}
+
+#timePickerScroller {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
+.timeTile {
+    height: 50px;
 }
