--- a/booking.css
+++ b/booking.css
@@ -66,12 +66,22 @@
     font-size: 24px;
 }
 
+#timePickerContainer {
+    height: 400px;
+    overflow: auto;
+}
+
 #timePickerScroller {
+    margin: 10px;
+    width: 200px;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
 }
 
 .timeTile {
     height: 50px;
+    font-size: 20px;
+    border: 1px solid black;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
