--- a/booking.css
+++ b/booking.css
@@ -54,6 +54,10 @@
     border: 1px solid black;
 }
 
+.selectedTile {
+    background-color: gray;
+}
+
 .laneButton {
     height: 50px;
     width: 50px;
@@ -81,7 +85,6 @@
 .timeTile {
     height: 50px;
     font-size: 20px;
-    border: 1px solid black;
     margin-top: 2px;
     margin-bottom: 2px;
 }
