--- a/booking.css
+++ b/booking.css
@@ -22,14 +22,14 @@
 
 
 
-#calGrid, #laneNumPickerContainer, #timePickerContainer, #nextBookerButton, #submitBookerButton {
+#calGrid, #laneNumPickerContainer, #timePickerContainer, .bookerButton {
     margin: auto;
     background-color: #f6f6f6;
     width: fit-content;
     box-shadow: 2px 3px rgba(0, 0, 0, 0.3);
 } 
 
-#nextBookerButton, #submitBookerButton {
+.bookerButton {
     width: 200px;
     height: 50px;
     font-size: 24px;
