--- a/booking.css
+++ b/booking.css
@@ -39,7 +39,9 @@
     margin-top: 20px;
 }
 
-#calGrid > div, #laneNumPickerContainer > div, #numHoursPickerContainer > div, #timePickerScroller > div {
+#calGrid > div, #laneNumPickerContainer > div, 
+#numHoursPickerContainer > div, #timePickerScroller > div,
+.slotTile > * {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,7 +92,6 @@
 }
 
 #slotPickerContainer {
-    margin: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -102,10 +103,11 @@
 }
 
 .slotTile {
-    width: 100%;
+    width: 50%;
+    margin: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     order: 1;
     margin-bottom: 5px;
 }
@@ -114,8 +116,8 @@
     font-size: 22px;
 }
 
-.slotTile > h2 {
-    font-size: 16px;
+.slotTile > p {
+    font-size: 20px;
 }
 
 .indoorSlotTile {
@@ -123,6 +125,15 @@
 }
 
 .selectedSlotTile {
+    width: 100%;
     border: 5px solid #52d6f4;
     order: 3;
+}
+
+.hidden {
+    display: none;
+}
+
+.error {
+    background-color: red;
 }
